name: tutorials
version: 0.1.0

build-type: Simple
cabal-version: >= 1.10


library
  hs-source-dirs:
    src
  exposed-modules:
    Tutorials
  build-depends:
      base >= 4.8 && < 4.9
  ghc-options:
    -Wall
  default-language:
    Haskell2010


executable tutorials
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
      base
    , tutorials
    , filepath
    , hakyll >= 4.7  && < 4.8
    , pandoc >= 1.14 && < 1.18
  ghc-options:
    -Wall
  default-language:
    Haskell2010
