name:               tutorials
version:            0.1.0
cabal-version:      >= 1.10
synopsis:           Stack Builders' tutorials
description:        Stack Builders' tutorials
homepage:           https://stackbuilders.com/tutorials
category:           Web
build-type:         Simple
extra-doc-files:    README.md
extra-source-files: makefile

executable tutorials
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
      base
    , filepath
    , hakyll >= 4.7  && < 4.8
    , pandoc >= 1.14 && < 1.18
  ghc-options:
    -Wall
  default-language:
    Haskell2010
