name: open-data
version: 0.1.0
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  exposed-modules:
    OpenData
  build-depends:
      base >= 4.8 && < 4.9
    , bytestring
    , cassava >= 0.4 && < 0.5
    , vector >= 0.11 && < 0.12
  ghc-options: -Wall
  default-language: Haskell2010

executable open-data-exe
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall
  build-depends:
      base
    , open-data
  default-language: Haskell2010
