cabal-version: 2.2

name: shortener
version: 0.1.0.0

common common
  build-depends:
      base >= 4.14
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Shortener
  build-depends:
      blaze-html >= 0.9
    , containers
    , http-types >= 0.12
    , scotty >= 0.12
    , text

executable shortener
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      shortener
