name:                 calc
version:              0.1.0
cabal-version:        >= 1.10
license:              MIT
author:               Mark Karpov <markkarpov@openmailbox.org>
maintainer:           Mark Karpov <markkarpov@openmailbox.org>
homepage:             https://github.com/stackbuilders/tutorials
bug-reports:          https://github.com/stackbuilders/tutorials/issues
category:             GUI
synopsis:             The calculator is an example of a GUI application
build-type:           Simple
description:          The calculator is an example of a GUI application.
extra-source-files:   README.md

source-repository head
  type:               git
  location:           https://github.com/stackbuilders/tutorials.git

executable calc
  main-is:            Main.hs
  hs-source-dirs:     src
  build-depends:      base             >= 4.8 && < 5
                    , gtk3             >= 0.14.2
                    , transformers     >= 0.3 && < 0.5
                    , text             >= 0.2 && < 1.3
  ghc-options:        -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010
