name:                 gui-application
version:              0.1.0
cabal-version:        >= 1.10
license:              MIT
author:               Mark Karpov <markkarpov@openmailbox.org>
maintainer:           Mark Karpov <markkarpov@openmailbox.org>
homepage:             https://github.com/stackbuilders/tutorials
bug-reports:          https://github.com/stackbuilders/tutorials/issues
category:             GUI
synopsis:             The tutorial guides through creation of basic GUI application
build-type:           Simple
description:          The tutorial guides through creation of basic GUI application.
extra-source-files:   README.md

source-repository head
  type:               git
  location:           https://github.com/stackbuilders/tutorials.git

executable gui-application
  main-is:            Main.hs
  hs-source-dirs:     src
  build-depends:      base             >= 4.8 && < 5
                    , gtk3             >= 0.14.2
                    , transformers     >= 0.3 && < 0.5
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010
